Simplify, refactor, and keep old ID's for 10 minutes.